tests/NormalTests/paczka2/big_fuzzy/71176057.err
Error in line 1: Igi S607 56,4
Error in line 8: m3agJTN S288 55,0
Error in line 10: Igi S872 82,4
Error in line 16: CaEJDAOheo S288 81,9
Error in line 20: CaEJDAOheo S607 64,0
Error in line 11: ORP S607 1,4
Error in line 27: Igi S288 3,0
Error in line 29: ORP S607 12,9
Error in line 25: A64 S872 63,8
Error in line 37: A64 A64 2,3
Error in line 41: A64 S288 40,4
Error in line 44: A64 S607 24,40
Error in line 43: A64 S872 22,3
Error in line 46: A64 S607 93,8
Error in line 38: KTEiQLF S288 13,3
Error in line 49: A64 S872 82,3
Error in line 56: KTEiQLFS6074,5
Error in line 57: KTEiQLF S607 5,7
Error in line 59: KTEiQLF S872 13,6
Error in line 64: bm1zRE S607 3,2
Error in line 61: ORP S288 47,2
Error in line 63: m3agJTN S607 88,6
Error in line 76: KTEiQLF S607 51,0
Error in line 80: bm1zRE S288 26,3
Error in line 88: A64 A64 51,2
Error in line 90: KTEiQLF S872 67,4
Error in line 101: KTEiQLFA6493,6
Error in line 100: KTEiQLF S607 64,7
Error in line 108: ORP S607 4,0
Error in line 111: KTEiQLF A64 201,2
Error in line 106: A64 S872 4,1
Error in line 109: Igi A64 75,9
Error in line 127: Igi S607 240.9
Error in line 110: m3agJTN S872 240,1
Error in line 130: m3agJTN A64 44,1
Error in line 124: Igi S607 93,0
Error in line 147: Igi S288 6,9
Error in line 151: bm1zRE S607 76,4
Error in line 159: ORP S607 81,7
Error in line 172: m3agJTN S872 994,9
Error in line 176: m3agJTN A64 38,5
Error in line 168: CaEJDAOheo S288 46,8
Error in line 185: KTEiQLF S872 -4,1
Error in line 181: KTEiQLF S872 77,4
Error in line 195: bm1zRE A64 87,3
Error in line 202: KTEiQLF S872 97,6
Error in line 205: m3agJTN S872 76,27
Error in line 203: KTEiQLF S607 83,6
Error in line 206: KTEiQLF S288 27,7
Error in line 221: m3agJTN A64 -4,4
Error in line 217: m3agJTN A64 88,8
Error in line 215: A64 S607 31,4
Error in line 223: A64 S288 11,5
Error in line 210: bm1zRE A64 23,7
Error in line 192: CaEJDAOheo S607 266,8
